--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   xml: ^5.3.0
-  webview_flutter: ^3.0.1
+  webview_flutter: ^3.0.0
+  async: ^2.8.2
+  http: ^0.13.4
+  xml2json: ^5.3.2
 
 dev_dependencies:
   flutter_test:
