--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   http: ^0.13.4
   xml2json: ^5.3.2
   shimmer: ^2.0.0
-
+  auto_size_text: ^3.0.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
