--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dependencies:
   shimmer: ^2.0.0
   auto_size_text: ^3.0.0
   intl: ^0.17.0
+  flutter_launcher_icons: ^0.9.2
+
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "images/snowflake.png"
 
 
 dev_dependencies:
